01-hello-world-rest-api/helloworld-v2-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: helloworld-restapi-v2
spec:
  replicas: 2
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: helloworld-restapi
        version: v2
    spec:
      containers:
        - image: gcr.io/ravi-kubernetes-tutorial/helloworld_docker:v14
          imagePullPolicy: Always
          name: helloworld-restapi
          ports:
            - containerPort: 80
