01-hello-world-rest-api/destinationrule-helloworld-restapi.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloworld-restapi
spec:
  host: helloworld-restapi
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpHeaderName: version   # 1
